Fixed page overflow content

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,5 +11,7 @@
 		display: grid;
 		margin: 0 auto;
 		padding: 0 $margin * 2;
+		height: 80vh;
+		overflow-y: scroll;
 	}
 }
